--- a/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
+++ b/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
@@ -171,4 +171,10 @@
     \item Διόρθωση λάθος αρίθμησης κεφαλαίων στο Κεφάλαιο 2.
 \end{itemize}
 
+\subsection{Από έκδοση v0.2 σε έκδοση v1.0}
+\begin{itemize}
+    \item Διόρθωση όλων των Robustness Diagrams, ώστε να εξηγήσουμε καλύτερα ποια boundary objects τελικά αναφέρονται τις ίδιες οθόνες (και κλάσεις) και ποια entity objects αναφέρονται πάλι την ίδια βασική κλάση.
+    \item Επίσης ό,τι αλλαγές έγιναν στη πορεία φαίνονται στα ανανεωμένα Robustness Diagrams
+\end{itemize}
+
 \end{document}
