--- a/Reports/Team-Risk-Assessment/v1.0/Files/Team-risk-assessment-v1.0.tex
+++ b/Reports/Team-Risk-Assessment/v1.0/Files/Team-risk-assessment-v1.0.tex
@@ -124,7 +124,8 @@
 
 \subsection{Από έκδοση v0.2 σε έκδοση v1.0}
 \begin{itemize}
-    \item Διόρθωση των συνδεόμενων δραστηριοτήτων ώστε να συμπίπτουν με τα ΤΥ του Team-plan v1.0 αντί για το v0.2.
+    \item Οι δύο εκδόσεις είναι πανομοιότυπες. 
+    \item Η ανάλυση ρίσκου γίνεται για τις δραστηριότητες (TY) του Team-plan v0.2, εφόσον δεν έχει νόημα να σχολιάσουμε ρίσκα για τις τελικές δραστηριότητες (TY) του Team-plan v1.0, αφού γνωρίζουμε πλέον τι έγινε.
 \end{itemize}
 
 \end{document}
