--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -313,8 +313,8 @@
 \begin{enumerate}
     \item Ο χρήστης επιλέγει να πάει στη σελίδα του προφίλ. 
     \item Το σύστημα φορτώνει τα στοιχεία του χρήστη (username, email, περιγραφή, τοποθεσία και τηλέφωνο) και τα εμφανίζει στον χρήστη.
-    \item Ο χρήστης επιλέγει να κάνει επεξεργασία των στοιχείων του και εισάγει νέα στοιχεία για αυτά που θέλει να αλλάξει (εκτός του password και της εικόνας χρήστη που αναλύονται σε εναλλακτική ροή και του email που δεν μπορεί να αλλάξει). 
-    \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 1-20 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή να είναι από 1 με 150 χαρακτήρες, η τοποθεσία να είναι από 1 έως 35 χαρακτήρες και το κινητό να είναι δεκαψήφιος αριθμός και βλέπει ότι οι κανόνες τηρούνται.
+    \item Ο χρήστης επιλέγει να κάνει επεξεργασία των στοιχείων του και εισάγει νέα στοιχεία για αυτά που θέλει να αλλάξει (εκτός του password που αναλύονται σε εναλλακτική ροή). 
+    \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 1-21 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή να είναι από 1 με 150 χαρακτήρες, η τοποθεσία να είναι από 1 έως 35 χαρακτήρες και το κινητό να είναι δεκαψήφιος αριθμός και βλέπει ότι οι κανόνες τηρούνται.
     \item Το σύστημα καταγράφει τις αλλαγές.
     \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του, όπου μπορεί να δει το ανανεωμένο προφίλ του.
 \end{enumerate}
@@ -326,6 +326,7 @@
     \item [3.α.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και τον νέο κωδικό του δύο φορές.
     \item [3.α.4.] Το σύστημα ελέγχει αν ο παλιός κωδικός είναι σωστός και ότι οι δύο νέοι κωδικοί είναι ίδιο και βλέπει ότι αυτό ισχύει.
     \item [3.α.5.] Το σύστημα ανανεώνει τον κωδικό πρόσβασης του χρήστη.
+    \item [3.α.6.] Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 2: Ο παλιός κωδικός κατά την αλλαγή κωδικού δεν είναι σωστός ή οι δύο νέοι κωδικοί δεν είναι ίδιοι:}
@@ -334,19 +335,25 @@
     \item [3.β.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του και τον νέο κωδικό που θέλει δύο φορές (η δεύτερη για επαλήθευση).
     \item [3.β.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και τον νέο κωδικό του δύο φορές.
     \item [3.β.4.] Το σύστημα ελέγχει αν ο παλιός κωδικός είναι σωστός και ότι οι δύο νέοι κωδικοί είναι ίδιο και βλέπει ότι αυτό δεν ισχύει.
-    \item [3.β.5.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.  
+    \item [3.β.5.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.
+    \item [3.β.6.] Ο χρήστης κλείνει το μήνυμα σφάλματος.
+    \item [3.β.7.] Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 3: Τα νέα στοιχεία που εισάγει ο χρήστης δεν τηρούν τους κανόνες μορφοποίησης:}
 \begin{enumerate}
     \item [4.α.1.] Το σύστημα ελέγχει τα νέα στοιχεία (username, περιγραφή, τοποθεσία, τηλέφωνο) και δεν τηρούνται οι προδιαγραφές.
     \item [4.α.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.
+    \item [4.α.3.] Ο χρήστης κλείνει το μήνυμα σφάλματος.
+    \item [4.α.4.] Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 4: Το νέο username χρησιμοποιείται ήδη από άλλον χρήστη:}
 \begin{enumerate}
     \item [4.β.1.] Το σύστημα ελέγχει το νέο username και βλέπει ότι υπάρχει ήδη χρήστης με το username αυτό. 
     \item [4.β.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.  
+    \item [4.β.3.] Ο χρήστης κλείνει το μήνυμα σφάλματος.
+    \item [4.β.4.] Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του.
 \end{enumerate}
 
 \subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
@@ -360,7 +367,7 @@
     \item Το σύστημα εμφανίζει στον χρήστη το προφίλ του μαζί με το χρηματικό υπόλοιπό του και επιλογή επεξεργασίας του.
     \item Ο χρήστης επιλέγει να επεξεργαστεί το χρηματικό υπόλοιπό του.
     \item Το σύστημα εμφανίζει 2 επιλογές στο χρήστη, προσθήκη ή αφαίρεση χρημάτων, ώστε να συμπληρώσει όποια θέλει.
-    \item Ο χρήστης επιλέγει προσθήκη χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να προσθέσει.
+    \item Ο χρήστης συμπληρώνει ένα ποσό και επιλέγει να κάνει προσθήκη χρημάτων.
     \item Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0), το οποίο ισχύει.
     \item Το σύστημα προσθέτει τα λεφτά στο χρηματικό υπόλοιπο του χρήστη και τον επιστρέφει στη σελίδα προφίλ.
     \item Το νέο υπόλοιπο φαίνεται πλέον στην σελίδα του προφίλ του χρήστη.
@@ -368,22 +375,22 @@
 
 \subsubsection*{Εναλλακτική ροή 1: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό - Έγκυρο ποσό:}
 \begin{enumerate}
-    \item [5.α.1.] Ο χρήστης επιλέγει αφαίρεση χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να αφαιρέσει.
-    \item [5.α.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο ισχύει.
+    \item [5.α.1.] Ο χρήστης συμπληρώνει ένα ποσό και επιλέγει να κάνει αφαίρεση χρημάτων.
+    \item [5.α.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0 και το ποσό είναι αριθμός) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο ισχύει.
     \item [5.α.3.] Το σύστημα αφαιρεί τα λεφτά στο χρηματικό υπόλοιπο του χρήστη και τον επιστρέφει στη σελίδα προφίλ.
     \item [5.α.4.] Το νέο υπόλοιπο φαίνεται πλέον στην σελίδα του προφίλ του χρήστη.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 2: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό - Μη έγκυρο ποσό:}
 \begin{enumerate}
-    \item [5.β.1.] Ο χρήστης επιλέγει αφαίρεση χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να αφαιρέσει.
-    \item [5.β.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο δεν ισχύει.
+    \item [5.β.1.] Ο χρήστης συμπληρώνει ένα ποσό και επιλέγει να κάνει αφαίρεση χρημάτων.
+    \item [5.β.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0 και το ποσό να είναι αριθμός) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο δεν ισχύει.
     \item [5.β.3.] Το σύστημα εμφανίζει μήνυμα σφάλματος.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 3: Η μορφοποίηση της εισόδου του χρήστη είναι μη έγκυρη:}
 \begin{enumerate}
-    \item [6.1.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0), το οποίο δεν ισχύει.
+    \item [6.1.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0 και το ποσό να είναι αριθμός), το οποίο δεν ισχύει.
     \item [6.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος.
 \end{enumerate}
 
@@ -473,8 +480,8 @@
 
 \subsection{Από έκδοση v0.3 σε έκδοση v1.0}
 \begin{itemize}
-    \item Διόρθωση του use case Diagram
-    \item Διορθώσεις στα use cases των κεφαλαίων 2.1, 2.2, 2.3
+    \item Διόρθωση του use case diagram.
+    \item Διορθώσεις σε όλα τα use cases ώστε να υπάρχει αντιστοιχία με τα robustness diagrams, τα sequence diagrams και με τον τελικό κώδικα μετά από αλλαγές που έγιναν κατά τη συγγραφή του κώδικα.
 \end{itemize}
 
 \end{document}
